fix empty scrollbar showing on FireFox

--- a/web_ui/src/layouts/Sidebar.scss
+++ b/web_ui/src/layouts/Sidebar.scss
@@ -145,7 +145,7 @@
     // ITEM
     .list {
         height: 120px;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         #response {
             margin: 5px 0;
